# RoseTTAFold-All-Atom

./: .gitignore  README.md  environment.yaml  make_msa.sh  pyproject.toml
hydra_plugins/rf2aa_searchpath/: rf2aa.py
input_prep/: make_ss.sh
rf2aa/: paths.py  run_inference.py
rf2aa/config/inference/: base.yaml
rf2aa/data/: preprocessing.py
